test/good/generics/complex01.px

func get<T>(a: [[T]]): [T] def
    return a[0]

print get([[2, 3]])[1]
