test/bad/generics/print03.px

func f<T>(x: T): T def
    return x

print [(f(write), f(2))]
